--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "keywords": [],
   "author": "Lambda School",
   "dependencies": {
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "knex": "^0.19.1",
-    "sqlite3": "^4.0.9"
+    "knex": "^0.19.2",
+    "sqlite3": "^4.1.0"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
-    "jest": "^24.8.0",
+    "jest": "^24.9.0",
     "nodemon": "^1.19.1",
     "supertest": "^4.0.2"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
